--- a/app/src/main/res/layout/fragment_s_home.xml
+++ b/app/src/main/res/layout/fragment_s_home.xml
@@ -23,7 +23,6 @@
             android:background="@drawable/bg_circle_head" />
 
 
-
         <LinearLayout
             android:id="@+id/ll_search"
             android:layout_width="wrap_content"
@@ -104,15 +103,15 @@
                 android:id="@+id/btn_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="登录/注册"
-                android:lines="1"
                 android:ellipsize="end"
+                android:lines="1"
+                android:text="登录/注册"
                 android:textColor="#202020"
                 android:textSize="@dimen/sp_16" />
 
             <TextView
                 android:id="@+id/tv_grade"
-                android:layout_width="@dimen/dp_63"
+                android:layout_width="wrap_content"
                 android:layout_height="@dimen/dp_19"
                 android:layout_marginTop="@dimen/dp_6"
                 android:background="#202020"
@@ -297,12 +296,44 @@
                     android:layout_marginTop="@dimen/dp_20"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recyclerView_activity"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/dp_12"
-                        android:paddingRight="@dimen/dp_12" />
+                        android:layout_height="@dimen/dp_135"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:layout_marginRight="@dimen/dp_12"
+                        android:orientation="horizontal">
+
+                        <com.felipecsl.gifimageview.library.GifImageView
+                            android:id="@+id/iv_activity1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <com.felipecsl.gifimageview.library.GifImageView
+                                android:id="@+id/iv_activity2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1" />
+
+                            <com.felipecsl.gifimageview.library.GifImageView
+                                android:id="@+id/iv_activity3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/dp_5"
+                                android:layout_weight="1" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
 
                     <View
                         android:layout_width="match_parent"
@@ -331,7 +362,7 @@
                             android:id="@+id/title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="全球品牌馆"
+                            android:text="优质国家馆"
                             android:textColor="#ff202020"
                             android:textSize="@dimen/sp_20" />
 
@@ -340,7 +371,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/title"
-                            android:text="保健美妆护肤热卖好货 喜领 专业为你推荐"
+                            android:text="精选全球当红大牌"
                             android:textColor="#aaaaaa"
                             android:textSize="@dimen/sp_12" />
 
@@ -398,17 +429,15 @@
                     android:id="@+id/ll_index_selected_brand"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/dp_12"
-                    android:paddingRight="@dimen/dp_12">
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_19"
-                        android:layout_marginTop="@dimen/dp_15"
+                        android:layout_marginTop="@dimen/dp_20"
                         android:text="精选品牌"
                         android:textColor="#ff202020"
                         android:textSize="@dimen/sp_20" />
@@ -417,7 +446,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_19"
                         android:layout_marginTop="@dimen/dp_1"
                         android:text="精选全球当红大牌"
                         android:textColor="#ffaaaaaa"
@@ -426,6 +454,47 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerView_selected_brand"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:nestedScrollingEnabled="false" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_30"
+                    android:background="#F5F5F5" />
+
+                <LinearLayout
+                    android:id="@+id/ll_index_category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_20"
+                        android:text="热门单品"
+                        android:textColor="#ff202020"
+                        android:textSize="@dimen/sp_20" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_1"
+                        android:text="精挑最流行单品"
+                        android:textColor="#ffaaaaaa"
+                        android:textSize="@dimen/sp_12" />
+
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerView_category"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:nestedScrollingEnabled="false" />
@@ -459,7 +528,7 @@
                         android:id="@+id/recyclerView_recommend"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_18" />
+                        android:layout_marginTop="@dimen/dp_6" />
 
                 </LinearLayout>
             </LinearLayout>
