需求变更：恢复商品列表加入购物车功能

--- a/app/src/main/res/layout/activity_category_second.xml
+++ b/app/src/main/res/layout/activity_category_second.xml
@@ -54,7 +54,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginRight="37dp"
         android:layout_marginBottom="@dimen/dp_30"
-        android:visibility="gone"
+        android:visibility="visible"
         >
 
 
