--- a/app/src/main/res/layout/activity_ddsplash.xml
+++ b/app/src/main/res/layout/activity_ddsplash.xml
@@ -53,12 +53,14 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/dp_43"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:layout_width="58dp"
                 android:layout_height="58dp"
-                android:background="@mipmap/ic_launcher" />
+                android:background="@mipmap/ic_launcher"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -91,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_2"
-                android:text="\@xiling.com"
+                android:text="\@xlmall.cn"
                 android:textColor="#ff202020"
                 android:textSize="@dimen/dp_10" />
 
