--- a/app/src/main/res/layout/activity_national_pavilion.xml
+++ b/app/src/main/res/layout/activity_national_pavilion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,23 +7,59 @@
     android:orientation="vertical"
     tools:context=".ddui.activity.NationalPavilionActivity">
 
-    <com.flyco.tablayout.SlidingTabLayout
-        android:id="@+id/sliding_tab"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        app:tl_indicator_width="@dimen/dp_26"
-        app:tl_indicator_color="#DCB982"
-        app:tl_indicator_height="3dp"
-        app:tl_textUnselectColor="#333333"
-        app:tl_textSelectColor="#DCB982"
-        app:tl_textsize="@dimen/sp_14"
-        android:background="@color/white"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.flyco.tablayout.SlidingTabLayout
+            android:id="@+id/sliding_tab"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:background="@color/white"
+            app:tl_indicator_color="#DCB982"
+            app:tl_indicator_height="3dp"
+            app:tl_indicator_width="@dimen/dp_26"
+            app:tl_textSelectColor="#DCB982"
+            app:tl_textUnselectColor="#333333"
+            app:tl_textsize="@dimen/sp_14" />
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/btn_go_card"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="37dp"
+        android:layout_marginBottom="@dimen/dp_30"
+        android:visibility="visible">
+
+
+        <ImageView
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:background="@drawable/bg_suspension_card" />
+
+        <TextView
+            android:id="@+id/tv_cart_badge"
+            android:layout_width="@dimen/dp_12"
+            android:layout_height="@dimen/dp_12"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/dp_1"
+            android:layout_marginRight="@dimen/dp_3"
+            android:background="@drawable/bg_oval_read"
+            android:textColor="#ffffffff"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+
+    </RelativeLayout>
+
+</RelativeLayout>
