--- a/app/src/main/res/layout/item_home_recommend.xml
+++ b/app/src/main/res/layout/item_home_recommend.xml
@@ -153,7 +153,7 @@
         android:layout_alignParentBottom="true"
         android:paddingRight="@dimen/dp_12"
         android:paddingBottom="@dimen/dp_12"
-        android:visibility="gone"
+        android:visibility="visible"
         >
 
         <ImageView
