--- a/app/src/main/res/layout/item_old_home_recommend.xml
+++ b/app/src/main/res/layout/item_old_home_recommend.xml
@@ -148,7 +148,7 @@
         android:layout_alignParentBottom="true"
         android:paddingRight="@dimen/dp_10"
         android:paddingBottom="@dimen/dp_12"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/iv_go_card"
