--- a/app/src/main/res/layout/dialog_ddm.xml
+++ b/app/src/main/res/layout/dialog_ddm.xml
@@ -58,6 +58,23 @@
             android:layout_above="@id/ll_bottom"
             />
 
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="@dimen/dp_12"
+            android:paddingRight="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_15"
+            android:lines="1"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            android:textColor="#ff202020"
+            android:visibility="gone"
+            android:textSize="@dimen/sp_16" />
+
+
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
@@ -66,6 +83,7 @@
             android:gravity="center"
             android:paddingLeft="@dimen/dp_12"
             android:paddingRight="@dimen/dp_12"
+            android:layout_below="@id/tv_title"
             android:layout_above="@id/view_line"
             android:textColor="#ff202020"
             android:textSize="@dimen/sp_16" />
