新增一件代发

--- a/app/src/main/res/layout/view_screening.xml
+++ b/app/src/main/res/layout/view_screening.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:weightSum="4">
+   >
 
 
     <RelativeLayout
@@ -108,9 +108,11 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rel_screening"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        >
 
         <LinearLayout
             android:id="@+id/ll_screening"
